--- a/style.css
+++ b/style.css
@@ -14,7 +14,8 @@ body {
 }
 
 p {
-  margin-bottom: 1.25em;
+  margin-bottom: 1em;
+  line-height: 1em;
 }
 
 h1, h2, h3, h4, h5 {
@@ -57,6 +58,20 @@ img {
 
 /* LINK CONTROL */
 
+/* Style all font awesome icons */
+.fa {
+  padding: 10px;
+  font-size: 30px;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 50%;
+}
+
+/* Add a hover effect if you want */
+.fa:hover {
+  opacity: 0.7;
+}
+
 a:link {
   outline: 0;
   color: inherit;
@@ -80,7 +95,7 @@ a:active {
 
 /* INDENTATION */
 
-html, body {margin: 0; height: 100%; overflow: hidden}
+html, body {overflow: auto}
 
 .center-screen {
   display: flex;
@@ -100,8 +115,7 @@ html, body {margin: 0; height: 100%; overflow: hidden}
   display: flex;
   flex-flow: row;
   justify-content: center;
-  width: 500px;
-  height: 500px;
+  width: 50%;
 }
 
 .my_picture {
@@ -116,12 +130,74 @@ html, body {margin: 0; height: 100%; overflow: hidden}
   margin: auto;
 }
 
-@media all and (orientation:portrait) {
-  .container {
-    flex-flow: column;
-  }
+.textwrap {
+  display: block;
+  align-items: center;
+  margin: 10%;
+}
 
-  .my_picture {
+.my_picture_resume {
+  display: block;
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.section {
+  display: flex;
+  margin: auto;
+  width: 70%;
+}
+
+.date, .former, .latter {
+  display: inline-block;
+}
+
+.date {
+  margin-right: 10px;
+  font-style: italic;
+}
+
+.former {
+  font-weight: bold;
+}
+
+.sectionTitle {
+
+}
+
+.sectionText {
+
+}
+
+.left {
+  order: 1;
+  width: 25%;
+  margin: 10px;
+  align-content: center;
+  text-align: center;
+}
+
+.right {
+  width: 75%;
+  text-align: left;
+  margin: 10px;
+  order: 2;
+}
+
+
+@media all and (orientation:portrait) {
+  .container, .section, .textwrap {
+    flex-flow: column;
+    width: 100%;
     margin: auto;
+  }
+  .left {
+    width: 100%;
+    height: 25%;
+  }
+  .right {
+    width: 100%;
+    height: 75%;
   }
 }
