--- a/style.css
+++ b/style.css
@@ -14,8 +14,12 @@ body {
 }
 
 p {
+  margin-bottom: 1.7em;
+}
+
+li {
+  list-style: circle;
   margin-bottom: 1em;
-  line-height: 1em;
 }
 
 h1, h2, h3, h4, h5 {
@@ -58,7 +62,6 @@ img {
 
 /* LINK CONTROL */
 
-/* Style all font awesome icons */
 .fa {
   padding: 10px;
   font-size: 30px;
@@ -67,7 +70,6 @@ img {
   border-radius: 50%;
 }
 
-/* Add a hover effect if you want */
 .fa:hover {
   opacity: 0.7;
 }
@@ -144,13 +146,18 @@ html, body {overflow: auto}
 }
 
 .section {
+  border-top: dotted;
   display: flex;
   margin: auto;
   width: 70%;
 }
 
+#top {
+  border-top: none;
+}
+
 .date, .former, .latter {
-  display: inline-block;
+  display: inline-flex;
 }
 
 .date {
@@ -160,6 +167,10 @@ html, body {overflow: auto}
 
 .former {
   font-weight: bold;
+}
+
+.latter {
+  font-weight: 100;
 }
 
 .sectionTitle {
@@ -185,6 +196,10 @@ html, body {overflow: auto}
   order: 2;
 }
 
+.item {
+  border-top: dotted;
+}
+
 
 @media all and (orientation:portrait) {
   .container, .section, .textwrap {
@@ -199,5 +214,9 @@ html, body {overflow: auto}
   .right {
     width: 100%;
     height: 75%;
+  }
+
+  .starting {
+    text-align: center;
   }
 }
