--- a/style.css
+++ b/style.css
@@ -13,6 +13,12 @@ body {
   color: #333;
 }
 
+#backbutton {
+  width: 50px;
+  height: 50px;
+  color: #333;
+}
+
 p {
   margin-bottom: 1.7em;
 }
@@ -55,13 +61,11 @@ small, .text_small {
 }
 
 /* IMAGE CONTROL */
-
 img {
   border-radius: 50%;
 }
 
 /* LINK CONTROL */
-
 .fa {
   padding: 10px;
   font-size: 30px;
@@ -81,7 +85,7 @@ a:link {
 }
 
 a:visited {
-  color:inherit;
+  color: inherit;
   text-decoration: none;
 }
 
@@ -96,8 +100,9 @@ a:active {
 }
 
 /* INDENTATION */
-
-html, body {overflow: auto}
+html, body {
+  overflow: auto
+}
 
 .center-screen {
   display: flex;
@@ -173,13 +178,9 @@ html, body {overflow: auto}
   font-weight: 100;
 }
 
-.sectionTitle {
+.sectionTitle {}
 
-}
-
-.sectionText {
-
-}
+.sectionText {}
 
 .left {
   order: 1;
@@ -200,17 +201,18 @@ html, body {overflow: auto}
   border-top: dotted;
 }
 
-
 @media all and (orientation:portrait) {
   .container, .section, .textwrap {
     flex-flow: column;
     width: 100%;
     margin: auto;
   }
+
   .left {
     width: 100%;
     height: 25%;
   }
+
   .right {
     width: 100%;
     height: 75%;
